--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.56.4",
