--- a/package.json
+++ b/package.json
@@ -40,11 +40,33 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@react-pdf/renderer": "^4.3.0",
+    "@tiptap/extension-collaboration": "^2.22.3",
+    "@tiptap/extension-collaboration-cursor": "^2.22.3",
+    "@tiptap/extension-color": "^2.22.3",
+    "@tiptap/extension-font-family": "^2.22.3",
+    "@tiptap/extension-heading": "^2.22.3",
+    "@tiptap/extension-highlight": "^2.22.3",
+    "@tiptap/extension-image": "^2.22.3",
+    "@tiptap/extension-italic": "^2.22.3",
+    "@tiptap/extension-link": "^2.22.3",
+    "@tiptap/extension-table": "^2.22.3",
+    "@tiptap/extension-table-cell": "^2.22.3",
+    "@tiptap/extension-table-header": "^2.22.3",
+    "@tiptap/extension-table-row": "^2.22.3",
+    "@tiptap/extension-task-item": "^2.22.3",
+    "@tiptap/extension-task-list": "^2.22.3",
+    "@tiptap/extension-text-align": "^2.22.3",
+    "@tiptap/extension-text-style": "^2.22.3",
+    "@tiptap/extension-underline": "^2.22.3",
+    "@tiptap/pm": "^2.22.3",
+    "@tiptap/react": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.17.3",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
@@ -52,7 +74,9 @@
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
+    "pdfmake": "^0.2.20",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-color": "^2.19.3",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
@@ -64,8 +88,10 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extension-resize-image": "^1.2.2",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
