--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
