--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@ag-media/react-pdf-table": "^2.0.3",
     "@clerk/nextjs": "^6.5.1",
+    "@liveblocks/client": "^3.0.0",
+    "@liveblocks/node": "^3.0.0",
+    "@liveblocks/react": "^3.0.0",
+    "@liveblocks/react-tiptap": "^3.0.0",
+    "@liveblocks/react-ui": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-aspect-ratio": "^1.1.6",
@@ -39,6 +44,8 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@react-pdf/renderer": "^4.3.0",
+    "@tiptap/extension-collaboration": "^2.23.0",
+    "@tiptap/extension-collaboration-cursor": "^2.23.0",
     "@tiptap/extension-color": "^2.22.3",
     "@tiptap/extension-heading": "^2.22.3",
     "@tiptap/extension-highlight": "^2.22.3",
@@ -86,6 +93,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.2",
     "vaul": "^1.1.2",
+    "y-protocols": "^1.0.6",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
