--- a/package.json
+++ b/package.json
@@ -81,11 +81,11 @@
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.2",
