--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.2",
+    "react-window": "^2.1.1",
+    "react-window-infinite-loader": "^2.0.0",
     "recharts": "^2.15.3",
     "resend": "^4.5.1",
     "sonner": "^2.0.3",
