--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "clear-cache": "node scripts/clear-cache.js"
   },
   "dependencies": {
-    "@ag-media/react-pdf-table": "^2.0.3",
     "@clerk/nextjs": "^6.5.1",
     "@liveblocks/client": "^3.0.0",
     "@liveblocks/node": "^3.0.0",
@@ -44,7 +43,6 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
-    "@react-pdf/renderer": "^4.3.0",
     "@tiptap/extension-collaboration": "^2.23.0",
     "@tiptap/extension-collaboration-cursor": "^2.23.0",
     "@tiptap/extension-color": "^2.22.3",
@@ -75,7 +73,8 @@
     "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
